--- a/data/translation/Zed/de_DE.csv
+++ b/data/translation/Zed/de_DE.csv
@@ -1,8 +1,21 @@
 "Add Company Business Unit","Geschäftseinheit hinzufügen"
 "Back to Company Business Units","Zurück zu Geschäftsbereichen des Unternehmens"
+"BU Name","BU Name"
+"BU Parent","BU Parent"
+"Company Business Unit","Business Unit des Unternehmens"
+"Company Business Unit","Business Unit des Unternehmens"
+"Company Business Unit ""%s"" has been created.","Business Unit ""%s"" des Unternehmens wurde erstellt."
+"Company Business Unit ""%s"" has been updated.","Business Unit ""%s"" des Unternehmens wurde aktualisiert."
+"Company Business Unit ""%s"" has not been created.","Business Unit ""%s"" des Unternehmens wurde nicht erstellt."
+"Company Business Unit ""%s"" has not been updated. A Business Unit cannot be set as a child to an own child Business Unit, please check the Business Unit hierarchy.","Business Unit ""%s"" des Unternehmens wurde nicht aktualisiert. Eine Business Unit kann nicht als Child einer eigenen Child-Business Unit festgelegt werden. Bitte die Business Unit-Hierarchie beachten."
+"Company Business Unit ""%s"" was deleted.","Business Unit ""%s"" des Unternehmens wurde gelöscht."
+"Company name","Name des Unternehmens"
+"Create Company Business Unit","Business Unit des Unternehmens erstellen"
+"Edit Company Business Unit","Business Unit des Unternehmens bearbeiten"
 "List of Company Business Units","Liste der Geschäftseinheiten"
+"No parent","Kein Parent"
 "Overview of Company Business Units","Übersicht der Geschäftseinheiten"
+Parent,Parent
 Save,Speichern
-Company Units,Geschäftseinheiten
-Create Company Business Unit, Geschäftseinheit Erstellen
-Edit Company Business Unit,Geschäftseinheit Bearbeiten
+"Select one",Einfachauswahl
+"You can not delete a business unit ""%s"" while it contains user","Die Business Unit ""%s"" kann nicht gelöscht werden, solange sie einen Nutzer enthält"
