--- a/data/translation/Zed/de_DE.csv
+++ b/data/translation/Zed/de_DE.csv
@@ -18,3 +18,5 @@ Parent,"Übergeordnete Geschäftseinheit"
 Save,Speichern
 "Select one","Eins auswählen"
 "You can not delete a business unit ""%s"" while it contains user","Geschäftseinheit ""%s"" kann nicht gelöscht werden, solange sie einen Nutzer enthält"
+Address,Adresse
+"Business Units",Geschäftseinheiten
