--- a/data/translation/Zed/de_DE.csv
+++ b/data/translation/Zed/de_DE.csv
@@ -21,3 +21,5 @@ Save,Speichern
 "You can not delete a business unit ""%s"" while it contains user","Geschäftseinheit ""%s"" kann nicht gelöscht werden, solange sie einen Nutzer enthält"
 Address,Adresse
 "Business Units",Geschäftseinheiten
+"Business Unit",Geschäftsbereich
+"Business Unit name","Name des Geschäftsbereichs"
