--- a/data/translation/Zed/en_US.csv
+++ b/data/translation/Zed/en_US.csv
@@ -21,3 +21,5 @@ Save,Save
 "You can not delete a business unit ""%s"" while it contains user","You can not delete a business unit ""%s"" while it contains user"
 Address,Address
 "Business Units","Business Units"
+"Business Unit","Business Unit"
+"Business Unit name","Business Unit name"
