SUPESC-38 Fixed clearing business unit fields through facade. (#10875)
SUPESC-38 Fixed clearing business unit fields through facade.

--- a/data/translation/Zed/de_DE.csv
+++ b/data/translation/Zed/de_DE.csv
@@ -23,3 +23,4 @@ Address,Adresse
 "Business Units",Geschäftseinheiten
 "Business Unit",Geschäftsbereich
 "Business Unit name","Name des Geschäftsbereichs"
+Phone,Telefon
