--- a/data/translation/Zed/en_US.csv
+++ b/data/translation/Zed/en_US.csv
@@ -23,3 +23,4 @@ Address,Address
 "Business Units","Business Units"
 "Business Unit","Business Unit"
 "Business Unit name","Business Unit name"
+Phone,Phone
